--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@shopify/hydrogen-react": "^2023.1.5",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-videos": "1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
