--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.1.6",
     "next-videos": "1.4.1",
     "react": "18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
